# cg-4

./: .gitignore  CMakeLists.txt
include/: input_controller.h  mesh_utils.h  obj_loader.h  scene_layout.h  shader_utils.h  texture_utils.h  window_utils.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: glad.c  main.cpp
